--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.32",
     "@types/morgan": "^1.9.1",
     "concurrently": "^5.2.0",
